# rust_by_example

./: Cargo.toml
http_server/public/: hello.html  index.html
http_server/src/: main.rs  server.rs  website_handler.rs
http_server/src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
src/weight_calc/: main.rs
