[package]
name = "rust_by_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "stack_and_heap"
path = "src/stack_and_heap/main.rs"

[[bin]]
name = "weight_calc"
path = "src/weight_calc/main.rs"

[dependencies]
